<resources>
    <string name="app_name">AppCommerce</string>

    <!-- Strings da Tela Principal -->
    <string name="title_categorias_populares">Categorias Populares</string>
    <string name="title_produtos_recentes">Produtos Recentes</string>
    <string name="title_activity_product_detailctivity">ProductDetailctivity</string>
    <string name="product_detail_button_comprar">Comprar</string>
    <string name="product_detail_descricao">Descrição</string>

<!-- Strings used for fragments for navigation -->
<!--    <string name="first_fragment_label">First Fragment</string>-->
<!--    <string name="second_fragment_label">Second Fragment</string>-->
<!--    <string name="next">Next</string>-->
<!--    <string name="previous">Previous</string>-->
<!--    <string name="hello_first_fragment">Hello first fragment</string>-->
<!--    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>-->

    <!-- Menu Drawer-->
    <string name="menu_drawer_home">Home</string>
    <string name="menu_drawer_minha_conta">Minha conta</string>
    <string name="menu_drawer_categorias">Categorias</string>
    <string name="menu_drawer_minhas_compras">Minhas compras</string>
    <string name="menu_drawer_meu_carrinho">Meu carrinho</string>
    <string name="menu_drawer_sair">Sair</string>
    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>


    <string name="descricao_camisa_ml">Produto camisa manga longa</string>

    <!-- Hints -->
    <string name="hint_nome">Nome</string>
    <string name="hint_e_mail">e-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="user_register_tool_bar_title">Cadastro de Usuário</string>
    <string name="produto_tool_bar_title">Produto</string>
    <string name="rtl_esqueci_a_senha">Esqueci a senha</string>
    <string name="btn_entrar">ENTRAR</string>
    <string name="user_login_nao_cadastro">Não tem cadastro?</string>
    <string name="user_login_cadastre_se">Cadastre-se aqui</string>
    <string name="user_login_title">Login</string>
    <string name="user_profile_title">Perfil</string>
    <string name="user_profile_sobrenome">Sobrenome</string>
    <string name="user_profile_endereco">Endereço</string>
    <string name="user_profile_logradouro">Logradouro</string>
    <string name="user_profile_numero">Número</string>
    <string name="user_profile_complemento">Complemento</string>
    <string name="user_profile_cidade">Cidade</string>
    <string name="user_profile_cep">CEP</string>
    <string name="btn_atualizar">ATUALIZAR</string>
    <string name="description_icone_de_categorias">Icone de categorias</string>
    <string name="product_category_title">Categorias</string>
    <string name="product_title">Produtos</string>
    <string name="product_detail_cor">Cor</string>
    <string name="product_detail_tamanho">Tamanho</string>
    <string name="settings_title">Configurações</string>
    <string name="menu_drawer_configuracoes">Configurações</string>
    <string name="description_foto_do_usuario">foto do usuário</string>
    <string name="cart_title">Meu Carrinho</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="order_title">Minhas compras</string>
    <string name="login_message">Email e/ou senha inválido(s)!</string>
    <string name="user_profile_msg_success">Dados atualizados com sucesso.</string>
    <string name="product_detail_cart_msg">Selecione uma cor e um tamanho.</string>

    <string-array name="states">
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>


</resources>